auth and workspace implemented

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,9 +9,12 @@ MONGODB_URI="mongodb://localhost:27017/api_testing_tool"
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=1d
+JWT_EXPIRES_IN=15m
 JWT_REFRESH_SECRET=your-refresh-token-secret-change-this
 JWT_REFRESH_EXPIRES_IN=7d
+
+# Frontend URL (for password reset links)
+FRONTEND_URL=http://localhost:5173
 
 # CORS Configuration
 # Comma-separated list of allowed origins for production
