--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "papaparse": "^5.5.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -62,6 +63,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.10.5",
+    "@types/papaparse": "^5.5.1",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
