--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,26 @@ NODE_ENV=development
 PORT=5000
 API_PREFIX=/api/v1
 
-# Database URLs
+# Backend Server Host Configuration
+BACKEND_HOST=localhost
+
+# Frontend Configuration
+FRONTEND_HOST=localhost
+FRONTEND_PORT=5173
+FRONTEND_URL=http://localhost:5173
+
+# Database Host Configuration
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=api_testing_tool
+
+MONGODB_HOST=localhost
+MONGODB_PORT=27017
+MONGODB_DB=api_testing_tool
+
+# Database URLs (can be constructed from above or set directly)
 DATABASE_URL="postgresql://user:password@localhost:5432/api_testing_tool?schema=public"
 MONGODB_URI="mongodb://localhost:27017/api_testing_tool"
 
@@ -13,11 +32,9 @@ JWT_EXPIRES_IN=15m
 JWT_REFRESH_SECRET=your-refresh-token-secret-change-this
 JWT_REFRESH_EXPIRES_IN=7d
 
-# Frontend URL (for password reset links)
-FRONTEND_URL=http://localhost:5173
-
 # CORS Configuration
 # Comma-separated list of allowed origins for production
+CORS_ORIGIN=http://localhost:5173
 ALLOWED_ORIGINS=https://yourdomain.com,https://app.yourdomain.com
 
 # Rate Limiting
