--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
-# Environment Variables
-VITE_API_URL=http://localhost:5000/api/v1
+# Backend API Configuration
+VITE_BACKEND_HOST=localhost
+VITE_BACKEND_PORT=5000
+VITE_API_BASE_URL=http://localhost:5000/api/v1
