--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
-# Environment Variables
-VITE_API_URL=http://localhost:5000/api/v1
+# Backend API Configuration
+# Configure these to point to your backend server
+VITE_BACKEND_HOST=localhost
+VITE_BACKEND_PORT=5000
+VITE_API_BASE_URL=http://localhost:5000/api/v1
