--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,13 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+package-lock.json
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
