--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "papaparse": "^5.5.3",
+    "uuid": "^13.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -64,6 +65,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^20.10.5",
     "@types/papaparse": "^5.5.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
