updated the vite to get the hostname from env file

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,7 @@
+# Frontend Configuration
+VITE_FRONTEND_HOST=localhost
+VITE_FRONTEND_PORT=5173
+
 # Backend API Configuration
 # Configure these to point to your backend server
 VITE_BACKEND_HOST=localhost
