--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "graphql": "^16.12.0",
+    "graphql-tag": "^2.12.6",
     "helmet": "^7.1.0",
     "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
