--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@graphql-tools/utils": "^11.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.559.0",
+    "monaco-editor": "^0.55.1",
+    "prettier": "^3.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1",
